kubernetes_api_1_deploy.yaml
#
# app / deployment.
#

kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-api-1
  labels:
    app: app-api-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-api-1
  template:
    metadata:
      labels:
        app: app-api-1
    spec:
      containers:
      - name: pamodyad-service1
        image: pamodyad/service-1:1
        ports:
        - containerPort: 3000

        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 20
